fixed centering because centering is hard; no more super overflow bros

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Share Tech Mono', monospace;
   color: white;
   background-color: #F3C82C;
+  /*background-color: black;*/
 }
 
 h1 {
@@ -29,35 +30,28 @@ a:hover {
   text-decoration: underline;
 }
 
+.firstName {
+  color: white;
+  font-weight: bold;
+}
+
+.lastName {
+  color: black;
+}
 .resume {
-  max-height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-.resume .embed-responsive {
-  position: relative;
-  display: block;
-  height: 0;
-  padding: 0;
-  overflow: hidden;
-}
-
 .about {
   background-color: rgba(0, 0, 0, 0.4);
-  margin: 5px;
+  min-height: 360px;
+  border: solid #f3c82c 2.5px;
 }
 
 .row {
   padding-left: 10%;
-  padding-right: 10%
-}
-
-.row.match-cols {
-  overflow: hidden;
-}
-
-.row.match-cols [class*="col-"] {
-  margin-bottom: -99999px;
-  padding-bottom: 99999px;
+  padding-right: 10%;
 }
 
 .row .about .extlink {
